# github-follow-contributions

./: .env.example  .gitignore  .last_build_id  BUILD_SCRIPTS_CLEANUP.md  FLUTTER_BUILD_GUIDE.md  FLUTTER_BUILD_GUIDE_FINAL.md  FLUTTER_MIGRATION_GUIDE.md  FLUTTER_WEB_DEPLOYMENT_GUIDE.md  README.md  all.yaml  build_flutter.bat  build_flutter.ps1  build_flutter.py  build_flutter.sh  build_flutter_final.py  build_flutter_simple.py  build_flutter_web.py  build_flutter_web_final.py  build_flutter_windows.py  build_web.bat  config.py  cp_all.sh  event_analysis.py  events.json  flutter_bootstrap.js  flutter_service_worker.js  index.html  index_backup.html  intro.md  main.dart.js  main.py  mytyping.py  package-lock.json  package.json  pyproject.toml  special.yaml  test_event_analysis.py  test_flutter_env.py  version.json  vite.config.js
.github/workflows/: deploy.yaml  flutter-build.yml
.trae/documents/: 定位 Flutter Web 页面不显示内容的调试与修复计划.md
.vercel/: project.json
assets/: NOTICES  index-BH2_wTIM.js  index-CX0Ivfdm.css  index-DYOS42GN.js
doc/: draft.md  proj.md
flutter_project/: pubspec.yaml
flutter_project/lib/: main.dart
flutter_project/lib/models/: event_data.dart
flutter_project/lib/providers/: event_provider.dart
flutter_project/lib/screens/: home_screen.dart
flutter_project/lib/widgets/: event_filter_dropdown.dart  (+2 more)
flutter_project/web/: index.html  manifest.json
frontend/: App.vue
ghfc_app/: README.md  commit_message.txt  pubspec.yaml
ghfc_app/lib/: main.dart
ghfc_app/test/: widget_test.dart
ghfc_app/web/: index.html  manifest.json
(+18 files in other folders)
